
 - HTML renditions of NUT man pages and books (or chunked chapters thereof)
   now include the AnchorJS script to provide permalinks to sections. [#3185]

 - Added a `make dist-docs` goal to generate, collect and tarball all document
   types (man, html-single, html-chunked, pdf) that we may have enabled for the
   current build configuration and available tooling. [#1400]

 - Added a GitHub Actions CI job to generate, upload and recycle `make dist`
   and `make dist-docs` tarballs so they are easier to obtain for people and
   other CI systems (which might not want to follow a Git repository). Links
   to these artifacts can be seen in workflow page (or its logs), and added
   as a line in GitHub Checks list associated with a commit. Note that the
   GitHub Action storage keeps artifacts for at most 90 days. [#1400, #2829]

 - Source directory `data/html` was renamed to `data/htmlcgi` in order to
   better reflect its contents and purpose, compared to documentation-oriented
   `html*` directories (and recipe variable names). This may impact some
   packaging recipes which do not rely on `make install` alone. [#3049]

 - Dropped the `compile` script from Git sources. It originates from automake
   and is added to work area (if missing) during `autogen.sh` rituals anyway.
   It is still distributed as part of `make dist` tarball. [#1209]

 - Default `PIDPATH` is now more strictly `/var/run`, unless building on a
   system conforming to FHS-3.0 standard where that location is absent or
   is a symlink, while `/run` exists and is a true directory. [#3099]

 - Revised CI and deliverable scripts, and Makefile recipes, to not use
   the verbatim `grep -E` (loudly preferred by newer systems, but may be
   absent on older ones) after all, nor use `egrep` (loudly disliked by
   newer systems). Instead, use what `configure` script detected for the
   generated files (or ones made from templates), and use a similar